--- a/styles.css
+++ b/styles.css
@@ -31,4 +31,19 @@ body {
     text-decoration: underline;
   }
   
-  
+  main {
+    padding: 20px;
+  }
+
+  h1,h2,h3,h4,h5,h6 {
+  font-weight: bold;
+  margin-top: 0;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
+
+legend {
+  font-weight: bold;
+}
