--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
   }
 
   header {
-    background-color: #f2f2f2;
-    padding: 10px;
+    background-color: #eec667;
+    padding: 20px;
   }
 
   nav ul {
@@ -63,7 +63,7 @@ textarea {
 }
 
 input[type="submit"] {
-  background-color: #333;
+  background-color: #31bee3;
   color: #fff;
   padding: 10px 20px;
   border: none;
