--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,27 @@ body {
   margin-top: 0;
 }
 
+.image-container {
+  text-align: center;
+  margin: 20px 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border: 2px solid black;
+  padding: 5px;
+  background-color: white;
+}
+
+.image-description {
+  font-size: 16px;
+  color: black;
+  margin: 5px 0;
+}
+
 fieldset {
   margin-bottom: 20px;
 }
